2002-08-26  Eric Sandall <eric@sandall.us>

		Added freecraft to games