@@ -1,5 +1,5 @@
 depends  SDL_image  &&
 depends  expat      &&
 depends  freetype2  &&
-depends  python     &&
+depends  Python     &&
 depends  zlib
