@@ -1,3 +1,7 @@
+2002-10-24  Eric Sandall <eric@sandall.us>
+
+		Fixed typo in DEPENDS
+
 2002-08-26  Eric Sandall <eric@sandall.us>
 
 		Added paragui to games
